# CollaSci

./: .coverage  .gitignore  .gitignore.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CollaSciTablesrelationship.pptx  GUI_schema.pptx  LICENSE.txt  README.md  database.sqlite  database_test.sqlite  database_test_bis.sqlite  setup.cfg  setup.py
CollaSci/: database_connect.py  database_utils.py  tables.py  tables_create.py  tables_update.py  update_tables.py
CollaSci.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CollaSci/db_function/: database_utils.py  tables_create.py  tables_update.py
CollaSci/interface/: GUI_utils.py  main_GUI.py  tab_experiment.py  tab_material.py  tab_project.py  tab_user.py
CollaSci/tests/: conftest.py
CollaSci/tests/data/: database_test.sqlite
CollaSci/tests/db_function/: test_database_utils.py  test_tables_create.py  test_tables_update.py
CollaSci_env/: pyvenv.cfg
CollaSci_env/Scripts/: activate  activate.bat  get_objgraph  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  undill
data/Super other project/DQVOF/DQVOF 1/Heat Capacity vs Temperature/MMPS He4 bis/DQVOF 1_Heat Capacity vs Temperature_MMPS He4 bis_Simutis___5_21/: 1.csv
data/Super project/DQVOF/DQVOF 1/Heat Capacity vs Temperature/MMPS He4/: DQVOF 1_Heat Capacity vs Temperature_MMPS He4_Orain_2T_300K_1_20102.csv
tests/: conftest.py
tests/data/: database_test.sqlite
tests/db_function/: test_database_utils.py  test_tables_create.py
