[metadata]
name = CollaSci
version = 0.0.1
summary = A package aimed to share scientific data
description_file = README.md
author = Jean-Christophe Orain
author_email = jean.christophe.orain@gmail.com
license_file = LICENSE.txt
url = https://github.com/jcorain/CollaSci/tree/main


[options]
packages = CollaSci
python_requires = >=3.9
#install_requires = psycopg2